// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PollToggle (flag) should match snapshot (default) 1`] = `
<button
  className="c-icon-button qa-toggle-flag "
  onClick={[Function]}
>
  <i
    className="far fa-flag"
  />
</button>
`;

exports[`PollToggle (flag) should match snapshot (toggled) 1`] = `
<button
  className="c-icon-button qa-toggle-flag "
  onClick={[Function]}
>
  <i
    className="fas fa-flag"
  />
</button>
`;

exports[`PollToggle (flag) should match snapshot (util) 1`] = `
<button
  className="c-icon-button qa-toggle-flag u-whatever"
  onClick={[Function]}
>
  <i
    className="far fa-flag"
  />
</button>
`;

exports[`PollToggle (hide) should match snapshot (default) 1`] = `
<button
  className="c-icon-button qa-toggle-hide "
  onClick={[Function]}
>
  <i
    className="far fa-eye"
  />
</button>
`;

exports[`PollToggle (hide) should match snapshot (toggled) 1`] = `
<button
  className="c-icon-button qa-toggle-hide "
  onClick={[Function]}
>
  <i
    className="far fa-eye-slash"
  />
</button>
`;

exports[`PollToggle (hide) should match snapshot (util) 1`] = `
<button
  className="c-icon-button qa-toggle-hide u-whatever"
  onClick={[Function]}
>
  <i
    className="far fa-eye"
  />
</button>
`;
